Add labels to edge arcing, close #24