@@ -28,5 +28,9 @@ intellij {
     updateSinceUntilBuild false
 }
 
+runIde {
+    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
+}
+
 patchPluginXml {
 }
